header alignment fixed

--- a/style.css
+++ b/style.css
@@ -4,47 +4,49 @@ body {
 
 /*---TOP---*/
 /*header*/
-.header, .links {
+.header {
     display: flex;
-    height: 50px;
-    background: #1f2937;
+    padding-left: 75px;
+    padding-right: 75px;
+    justify-content: space-between;
+    background: #1F2937;
     color: white;
-    padding-left: 100px;
-    padding-right: 100px;
+}
+.links {
+    display: flex;
+    width: 250px;  
+    text-align: center;
 }
 
-.header div {
+.links div {
     flex: 1;
 }
 
-.header .icon {
-    flex: 4;
-}
-
-.links div{
-    max-width: 100px;
-    min-width: 75px;
-    text-align: center;
-}
 
 /*main*/
 .main {
     display: flex;
-    justify-content: center;
-    align-items: center;
     padding-left: 100px;
     padding-right: 100px;
-    background: #1f2937;
-    color: white;
+    align-items: center;
+    justify-content: center;
+    background: #1F2937;
+
+}
+
+.main {
+    flex: 1;
     height: 300px;
 }
 
-.main div{
-    flex: 1;
+.left {
+    background: pink;
+    padding-right: 100px;
 }
 
 .right {
     background: grey;
+    justify-content: center;
 }
 
 
